# PDS2_TP

./: CMakeLists.txt  Documentação.md  README.md  Torneio.cpp  Torneio.h  jogador.cpp  jogador.h  main.cpp  partida.cpp  partida.h  pessoa.cpp  pessoa.h  tecnico.cpp  tecnico.h  times.cpp  times.h
